# backend/openapi.json
@@ -2688,6 +2688,16 @@
         }
       }
     },
+    "/api/v1/guardian/devices/{id}/track": {
+      "get": {
+        "operationId": "get_api_v1_guardian_devices_id_track",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/v1/guardian/signal/health": {
       "get": {
         "operationId": "get_api_v1_guardian_signal_health",
